--- a/src/components/FormAdd/form.module.css
+++ b/src/components/FormAdd/form.module.css
@@ -2,6 +2,7 @@
 /* display: flex; */
 max-width: 300px;
 border: 1px solid #000000;
+border-radius: 5px;
 padding: 10px;
 }
 
@@ -15,3 +16,6 @@ padding: 10px;
     padding: 5px;
     
 }
+
+
+
